--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "cn.com.hsh.platform"
-        minSdkVersion 26
+        minSdkVersion 25
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -28,9 +28,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    implementation 'com.android.support:appcompat-v7:+'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:+'
+//    implementation 'com.android.support:appcompat-v7:+'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+//    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+//    implementation 'com.android.support:design:+'
+    implementation 'com.google.android.material:material:1.0.0'
 //    implementation 'net.sf.json-lib:json-lib:2.4:jdk15'
     implementation files('libs/commons-beanutils-1.9.2.jar')
     implementation files('libs/commons-codec-1.3.jar')
