--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     releaseImplementation("com.simple:spiderman-no-op:1.1.3") {
         exclude group: "com.android.support"
     }
+
+    //异步网络请求类
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 }
